<resources>
    <string name="app_name">BlueSenseHub</string>
    <string name="bluesense_devices_paired">BlueSense</string>
    <string name="action_add_device">Add new device</string>
    <string name="action_settings">Settings</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="new_streaming_session">New Streaming Session</string>
    <string name="select_devices_label">Select devices</string>
    <string name="confirm">ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="parameters">Parameters</string>
    <string name="status">Status</string>
    <string name="network">Network</string>
    <string name="port">Port</string>
    <string name="default_port_number">9432</string>
    <string name="log_file">Log file</string>
    <string name="file_name">File name</string>
    <string name="default_file_name">defaul_name</string>
    <string name="devices_status">Device connected/connecting/disconnected</string>
    <string name="delete_device_message">Are you sure to delete the device?</string>
    <string name="delete_device_title">Delete device:</string>
    <string name="yes">yes</string>
    <string name="new_logging_session">New Logging Session</string>
    <string name="actions">actions</string>
    <string name="no_device_selected">No device selected. Choose at least one device to start a session.</string>
    <string name="send">send</string>
    <string name="new_console_session">New Console Session</string>
    <string name="action_refresh_connection">Reconnect</string>
    <string name="action_change_device">Change device</string>
    <string name="choose_device">Choose a device:</string>
    <string name="enter_command">Enter a command</string>
    <string name="pref_streaming_cat_title">Streaming session</string>
    <string name="pref_streaming_default_port_title">Default port number</string>
    <string name="pref_streaming_default_port_summary">Default value for the port to transmit the stream</string>
    <string name="pref_streaming_save_on_file_title">Save on file</string>
    <string name="pref_streaming_save_on_file_summary">Save on file by default</string>
    <string name="pref_logging_cat_title">Logging session</string>
    <string name="pref_log_commands_title">Commands</string>
    <string name="pref_log_commands_summary">Define the quick commands</string>
    <string name="define_commands">Define commands</string>
    <string name="no_quick_commands">No quick commands added yet.</string>
    <string name="no_setups">No setups added yet.</string>
    <string name="enter_name_command">Enter a command name</string>
    <string name="command_name">Name</string>
    <string name="command_value">Value</string>
    <string name="logging_setups">Logging setups</string>
    <string name="new_setup_label">New setup</string>
    <string name="new_setup_name">New setup name</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="no_setup_name">No setup name specified.</string>
    <string name="action_reset_setups">Reset setups</string>
    <string name="select_setup_label">Select setup</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_sync_rtc">Sync RTC</string>
</resources>
