<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/command_name"
        android:text="@string/command_name"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <EditText
        android:id="@+id/command_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_command" />

    <TextView
        android:id="@+id/command_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/command"
        android:text="@string/command_value"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <AutoCompleteTextView
        android:id="@+id/command_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_command" />

</LinearLayout>