<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sync_rtc"
        android:icon="@drawable/ic_autorenew_white_48dp"
        android:title="@string/action_sync_rtc"
        app:showAsAction="ifRoom|withText"
        android:visible="true"
        android:orderInCategory="100" />

    <item
        android:id="@+id/action_refresh_connection"
        android:icon="@drawable/ic_autorenew_white_48dp"
        android:title="@string/action_refresh_connection"
        app:showAsAction="ifRoom|withText"
        android:visible="true"
        android:orderInCategory="105" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText"
        android:visible="true"
        android:orderInCategory="200" />

</menu>