<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/select_devices_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_devices_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/select_devices_label"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/buttons_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttons_layout">

        <Button
            android:id="@+id/confirm_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/confirm" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel"
            android:layout_toStartOf="@+id/confirm_button"
            android:layout_gravity="bottom|right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_all_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/select_all"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deselect_all_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/deselect_all"
            android:layout_alignParentStart="true"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>