<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uicontroller.activities.StandardPairedDeviceActivity">
    <item
        android:id="@+id/action_refresh_connection"
        android:icon="@drawable/ic_autorenew_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh_connection"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <group
        android:id="@+id/group_option"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|withText">
        <item
            android:id="@+id/action_change_device"
            android:icon="@drawable/ic_account_balance_wallet_white_48dp"
            android:orderInCategory="100"
            android:title="@string/action_change_device"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:orderInCategory="200"
            android:title="@string/action_settings"
            app:showAsAction="ifRoom|withText" />
    </group>
</menu>