<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/network_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:id="@+id/network_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/port_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/network_label"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/port_number"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/port_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/network_label"
            android:hint="@string/default_port_number"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/port_label"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/log_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_file"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:id="@+id/log_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/log_file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_label"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/log_file_name"
            android:text="@string/file_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/log_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/log_file_name_label"
            android:hint="@string/default_file_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/log_file_name"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

</LinearLayout>