<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/new_setup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_setup_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/sets_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_setup_name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sets_number_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight=".67"
            android:labelFor="@+id/sets_number"
            android:text="@string/number_of_sets"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/sets_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:inputType="number"
            android:textAlignment="viewEnd"
            android:paddingEnd="30dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_layout"
        android:layout_below="@+id/sets_layout"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/confirm_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/cancel" />


    </RelativeLayout>
</RelativeLayout>